--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/gijgo@1.9.6/js/gijgo.min.js" type="text/javascript"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script><!-- For icons   -->  
   <link href="https://unpkg.com/gijgo@1.9.6/css/gijgo.min.css" rel="stylesheet" type="text/css" />
    
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,5 +15,5 @@
 <link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-es5.cbd835f8e6c8050d8346.js" nomodule defer></script><script src="polyfills-es2015.37624bac5e41e5aa7ea5.js" type="module"></script><script src="scripts.5c32c8ec724a43852510.js" defer></script><script src="runtime-es2015.0c2bf1e5d0219dc6d0aa.js" type="module"></script><script src="main-es2015.762a03678474a782cd57.js" type="module"></script><script src="runtime-es5.0c2bf1e5d0219dc6d0aa.js" nomodule defer></script><script src="main-es5.762a03678474a782cd57.js" nomodule defer></script></body>
+<script src="polyfills-es5.cbd835f8e6c8050d8346.js" nomodule defer></script><script src="polyfills-es2015.37624bac5e41e5aa7ea5.js" type="module"></script><script src="scripts.7505850b17438bee47fc.js" defer></script><script src="runtime-es2015.0c2bf1e5d0219dc6d0aa.js" type="module"></script><script src="main-es2015.85a96092d0f321c0e309.js" type="module"></script><script src="runtime-es5.0c2bf1e5d0219dc6d0aa.js" nomodule defer></script><script src="main-es5.85a96092d0f321c0e309.js" nomodule defer></script></body>
 </html>
